прошел 2 часть курса

--- a/ConsoleApp1/Основы программирования C# Часть 2.csproj
+++ b/ConsoleApp1/Основы программирования C# Часть 2.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Основы программирования C# Часть 2</RootNamespace>
+    <AssemblyName>Основы программирования C# Часть 2</AssemblyName>
   </PropertyGroup>
 
 </Project>
